--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,12 +1,10 @@
 name: GenerateDocs
 
-# https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on
 on:
   push:
     branches:
       - main
 
-# https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobs
 jobs:
   gen_docs:
     runs-on: ubuntu-latest
@@ -17,6 +15,11 @@ jobs:
         run: nim pullConfig
       - name: Generate docs
         run: nim docs
-
-# https://github.com/nim-lang/Nim/wiki/BuildServices#github-actions
-# https://docs.github.com/en/actions/learn-github-actions/introduction-to-github-actions
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3.7.3
+        with:
+          # Note that the GITHUB_TOKEN is NOT a personal access
+          # token. A GitHub Actions runner automatically creates a
+          # GITHUB_TOKEN secret to authenticate in your workflow.
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
