--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: RunTests
 
 on:
-  workflow_dispatch # Manually trigger this workflow
+  workflow_dispatch: # Manually trigger this workflow
   pull_request:
     types:
       - '*'
