--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        nim: ['devel', 'version-1-4']
+        nim: ['devel', 'version-1-6', 'version-1-4']
     steps:
       - uses: actions/checkout@v2
       - uses: alaviss/setup-nim@0.1.1
